started to make tests pass